Squashed 'phydmslib/Bpp/bpp-seq/' changes from 37abd3b..6978099
6978099 mgmt io genetic co
a6a2bad missing virtual inheritance in BasicSequence
bacc21b unit test for Pasta (and Fasta)
c4ec330 add the Pasta class
257204e change this so that an inherited class can use these directly (maybe not a good idea? ... this is the case in VectorSiteContainer, by the way
6a60dca unit test for VectorProbabilisticSiteContainer
acd2833 add VectorProbabilisticSiteContainer
cc90359 DataTable columnNames don't like being iterated over using an interator for some reason, so we go the traditional route.  Add better exception messages while we're at it
03cb473 add unit test for ProbabilisticSite
2755fe8 add ProbabilisticSite interface and basic implementation
d2c0410 Merge branch 'master' of biopp.univ-montp2.fr:git/bpp-seq
4bae03d add to unit test a few tests to verify that site is still behaving as expected
a64655e added CoreSite interface and abstract class
7516f41 Unit test fixed.
9b220ee augment test with use-cases for probseq
1f9ff1e ProbabilisticSequence is ready to go now too; add to the build
37f31e2 start a test for set of use-cases of Probabilistic- objects
309b628 final fixes on ProbabilisticSymbolList, works on decent (but not exhaustive) set of use-cases, so add it to the build
4598014 upon further thought, it makes more sence to put this function in Alphabet than in AlphabetTools
23963d9 vast improvement over ProbabilisticSymbolList, moving all auxiliary methods, etc., out to toolboxes, one of these being ProbabilisticSymbolListTools
1031bb8 bug fix
c0dcac9 a tool needed for probseq, perhaps useful in general
75d65c3 because we assume alphabet size is same as number of states, we should impose this to be safe
18d8344 set a standard for the ordering of represented states of the alphabet, given (and enforced by) the new method getStates().  Also, clean up a few inconsistencies with text in exceptions and included headers
87c19a0 add body of BasicProbabilisticSequence, a bas

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,10 @@ SET(CPP_FILES
   Bpp/Seq/Transliterator.cpp
   Bpp/Seq/DistanceMatrix.cpp
   Bpp/Seq/CodonSiteTools.cpp
+  Bpp/Seq/ProbabilisticSymbolList.cpp
+  Bpp/Seq/ProbabilisticSymbolListTools.cpp
+  Bpp/Seq/ProbabilisticSequence.cpp
+  Bpp/Seq/ProbabilisticSite.cpp
   Bpp/Seq/Alphabet/AbstractAlphabet.cpp
   Bpp/Seq/Alphabet/LetterAlphabet.cpp
   Bpp/Seq/Alphabet/AlphabetExceptions.cpp
@@ -68,9 +72,11 @@ SET(CPP_FILES
   Bpp/Seq/Container/CompressedVectorSiteContainer.cpp
   Bpp/Seq/Container/SiteContainerIterator.cpp
   Bpp/Seq/Container/SequenceContainerIterator.cpp
+  Bpp/Seq/Container/VectorProbabilisticSiteContainer.cpp
   Bpp/Seq/Io/Clustal.cpp
   Bpp/Seq/Io/Dcse.cpp
   Bpp/Seq/Io/Fasta.cpp
+  Bpp/Seq/Io/Pasta.cpp
   Bpp/Seq/Io/Mase.cpp
   Bpp/Seq/Io/MaseTools.cpp
   Bpp/Seq/Io/Phylip.cpp
@@ -115,6 +121,10 @@ SET(H_FILES
   Bpp/Seq/SymbolListTools.h
   Bpp/Seq/Transliterator.h
   Bpp/Seq/DistanceMatrix.h
+  Bpp/Seq/ProbabilisticSymbolList.h
+  Bpp/Seq/ProbabilisticSymbolListTools.h
+  Bpp/Seq/ProbabilisticSequence.h
+  Bpp/Seq/ProbabilisticSite.h
   Bpp/Seq/Alphabet/AbstractAlphabet.h
   Bpp/Seq/Alphabet/AlphabetExceptions.h
   Bpp/Seq/Alphabet/Alphabet.h
@@ -149,6 +159,7 @@ SET(H_FILES
   Bpp/Seq/Io/Clustal.h
   Bpp/Seq/Io/Dcse.h
   Bpp/Seq/Io/Fasta.h
+  Bpp/Seq/Io/Pasta.h
   Bpp/Seq/Io/IOSequence.h
   Bpp/Seq/Io/ISequence.h
   Bpp/Seq/Io/ISequenceStream.h
@@ -188,6 +199,7 @@ SET(H_FILES
   Bpp/Seq/Container/SiteContainer.h
   Bpp/Seq/Container/SiteContainerTools.h
   Bpp/Seq/Container/SiteContainerIterator.h
+  Bpp/Seq/Container/VectorProbabilisticSiteContainer.h
   Bpp/Seq/AlphabetIndex/AlphabetIndex1.h
   Bpp/Seq/AlphabetIndex/AlphabetIndex2.h
   Bpp/Seq/AlphabetIndex/UserAlphabetIndex1.h
